# Webex-headless-messenger

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: codex-review-gate.yml  release.yml
deploy/systemd/: README.md  webex-headless-account-bot-sidecar-js.service  webex-headless-account-bot.env.example  webex-headless-account-bot.service  webex-headless-account-bot.target  webex-headless-receiver.env.example  webex-headless-sidecar-js.service  webex-headless-sidecar-receiver.service  webex-headless-sidecar.target  webex-headless-token-refresh.service  webex-headless-token-refresh.timer  webex-headless-token.env.example  webex-headless.env.example
docs/: PROJECT_STATE.md  PROJECT_TODO.md  realtime-sidecar.md  smoke-testing.md
docs/project_journal/2026/06/: 2026-06-03-webex-rust-crate-bootstrap.md  2026-06-05-webex-smoke-docs.md  2026-06-09-file-upload-helper.md  2026-06-09-realtime-sidecar-demo.md  2026-06-11-thin-cli.md  2026-06-12-production-sidecar.md  2026-06-14-account-bot-example.md  2026-06-14-sidecar-systemd-supervisor.md  2026-06-17-jsonl-state-store.md  2026-06-17-multi-room-catchup.md  2026-06-17-room-link-resolver.md  2026-06-17-sqlite-state-cache.md  2026-06-18-release-readiness.md  2026-06-18-thin-production-bot-layer.md
examples/: account_bot.rs  sidecar_receiver.rs  smoke.rs
examples/sidecar-js/: index.mjs  index.test.mjs  package-lock.json  package.json
src/: auth.rs  client.rs  error.rs  lib.rs  pagination.rs  realtime.rs  rooms.rs  sidecar.rs  state.rs  types.rs  webhooks.rs
