[package]
name = "webex-headless-messenger"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Headless async Rust bindings for Webex Messaging REST APIs and OAuth integrations."
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = { version = "0.4", optional = true }
hmac = { version = "0.12", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = { version = "0.10", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "time"] }
url = { version = "2", features = ["serde"] }
percent-encoding = "2"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
webhooks = ["dep:hex", "dep:hmac", "dep:sha1"]
experimental-websocket = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs"] }
